# upskill

./: LICENSE  README.md  fastagent.config.yaml  fastagent.jsonl  package.json  payment-processor.js  payment-processor.test.js  pr-description.md  propose-skills.sh  pyproject.toml  upskill.config.yaml
.fast-agent/sessions/2601221310-PGU2gc/: history_skill_gen.json  session.json
.fast-agent/sessions/2601221311-cw3IMd/: history_skill_gen.json  session.json
.github/workflows/: ci.yml  publish.yml
runs/2026_01_22_13_10/: batch_summary.json
runs/2026_01_22_13_10/run_1/: run_metadata.json  run_result.json
runs/2026_01_22_13_10/run_2/: run_metadata.json  run_result.json
runs/2026_01_22_13_11/run_1/: run_metadata.json
skills/write-good-pr/: SKILL.md  skill_meta.json
src/upskill/: __init__.py  cli.py  config.py  evaluate.py  fastagent_integration.py  generate.py  logging.py  manifest_utils.py  model_resolution.py  models.py
src/upskill/agent_cards/: evaluator.md  skill_gen.md  test_gen.md
src/upskill/validators/: __init__.py
tests/: test_agent_card_guardrails.py  test_config.py  test_delete_command.py  test_model_resolution.py
